@@ -2,6 +2,7 @@
 
 	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
 	* Fixed bug #15863: htmlArea RTE: Initialization never completes in Google Chrome 7
+	* Follow-up to bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
 
 2010-10-04  Stanislas Rolland  <typo3@sjbr.ca>
 
